--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   postgres:
     image: "postgres"
@@ -9,35 +8,36 @@ services:
       POSTGRES_USER: "MyUser"
       POSTGRES_PASSWORD: "Password!23"
       POSTGRES_DB: "sfr-database"
+    volumes:
+      - sfr_volume:/var/lib/postgresql/data
+  postgres-keyloack:
+    image: "postgres"
+    container_name: "postgres-keyloack"
+    ports:
+      - 5433:5432
+    environment:
+      POSTGRES_USER: "MyUser"
+      POSTGRES_PASSWORD: "Password!23"
+      POSTGRES_DB: "keyloack"
     volumes: 
-      - sfr-database-volume:/var/lib/postgresql/data
+      - sfr_volume:/var/lib/postgresql/data
   mongodb:
     image : mongo
     container_name: mongodb
+    ports:
+      - 27017:27017
     environment:
       - PUID=1000
       - PGID=1000
     volumes:
-      - sfr-database-volume:/data/db
-    ports:
-      - 27017:27017
-  keycloak:
-    image: quay.io/keycloak/keycloak:latest
-    container_name: keycloak
-    environment:
-      DB_VENDOR: POSTGRES
-      DB_ADDR: postgres
-      DB_DATABASE: "sfr-database"
-      DB_USER: "MyUser"
-      DB_SCHEMA: keycloak
-      DB_PASSWORD: "Password!23"
-      KEYCLOAK_USER: admin
-      KEYCLOAK_PASSWORD: "Password!23"
-    ports:
-      - 8080:8080
-    depends_on:
-      - postgres
+      - sfr_volume:/data/db
 volumes:
-  sfr-database-volume:
-    name: sfr-database-volume
-    external: true
+  sfr_volume_postgres:
+    name: "sfr-volume-postgres"
+    external: false
+  sfr_volume_postgres_keyloack:
+    name: "sfr-volume-postgres-keyloack"
+    external: false
+  sfr_volume_mongodb:
+    name: "sfr-volume-mongodb"
+    external: false
