--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-validator": "^6.12.0",
-    "mongoose": "^5.12.13",
+    "mongoose": "^5.13.7",
     "morgan": "~1.9.1",
     "pg": "^8.6.0",
     "redoc-express": "^1.0.0",
@@ -25,6 +25,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.0"
   }
 }
